apexForAgentforceSuperbadge/objects/Experience__c/fields/Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Accuracy__c</fullName>
    <description>Accuracy Rating for the description and other information for the experience.</description>
    <label>Accuracy</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>