apexForAgentforceSuperbadge/objects/Experience__c/fields/Communication__c.field-meta.xml
<CustomField>
    <fullName>Communication__c</fullName>
    <description>Communication Rating for the experience.</description>
    <label>Communication</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>