apexForAgentforceSuperbadge/objects/Experience__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Value for money rating for the experience.</description>
    <label>Value</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>